Test/semantic_tests/error12_non_int_index.expected
Error type 12 at Line 5: Non-integer array index.
