Test/semantic_tests/error12_non_int_index.cmm
int main()
{
    int arr[5];
    float f = 2.5;
    arr[f] = 10;
    return 0;
}
